--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Hey Hey ✨</title>
+    <title>Hey Hey ✨✨✨</title>
     <link rel="icon" type="img/jpg" href="https://c4.wallpaperflare.com/wallpaper/812/187/770/kimi-no-na-wa-tachibana-taki-miyamizu-mitsuha-anime-wallpaper-preview.jpg">
 
 </head>
@@ -42,10 +42,10 @@
   <div class="petal"></div>
   <div class="petal"></div>
   <div class="text">
-      <span>Happy Rose Day ✨</span>
+      <span>Happy Rose Day Gauriiiii✨</span>
   </div>
 </div>
-<span id="prompt">Touch the rose</span>
+<span id="prompt">Touch the rose!!!!!</span>
 
 <div style="display: none;">
   <audio autoplay="" loop="" controls="">
@@ -53,7 +53,7 @@
   </audio>
 </div>
 
-<h1>By Your one and only Mad head 😌✨</h1>
+<h1>By Your one and only Ambue😌✨</h1>
 <p><a href="https://wa.me/918767506459?text=awesome one ✨" target="_blank">For feedback</a></p>
 </body>
 
