--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div class="petal"></div>
   <div class="petal"></div>
   <div class="text">
-      <span>Happy Rose Day Gauriiiii✨</span>
+      <span>Happy Rose Day Gauriiiii✨✨✨</span>
   </div>
 </div>
 <span id="prompt">Touch the rose!!!!!</span>
@@ -54,7 +54,7 @@
 </div>
 
 <h1>By Your one and only Ambue😌✨</h1>
-<p><a href="https://wa.me/9111113431?text=awesome one ✨" target="_blank">Send you reply here!!!!</a></p>
+<p><a href="https://wa.me/9111113431?text=Awesome one ✨, Happy Rose Day to you too Ambuj!!! ❤️" target="_blank">Send you reply here!!!!</a></p>
 </body>
 
 </html>
