--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </div>
 
 <h1>By Your one and only Ambue😌✨</h1>
-<p><a href="https://wa.me/9111113431?text=Awesome one ✨, Happy Rose Day to you too Ambuj!!! ❤️" target="_blank">Send you reply here!!!!</a></p>
+<p><a href="https://wa.me/9111113431?text=Thank you!!! ✨, Happy Rose Day to you too Ambuj!!! ❤️" target="_blank">Send you reply here!!!!</a></p>
 </body>
 
 </html>
